# BookShop

./: TODO  pyproject.toml  requirements.txt
apps/: urls.py
apps/books/: admin.py  filter.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/books/migrations/: 0001_initial.py  0002_alter_book_options.py
apps/users/: serializers.py  urls.py  views.py
root/: settings.py  urls.py
templates/books/: book_change_list.html
