[tool.poetry]
name = "bookshop"
version = "0.1.0"
description = ""
authors = ["Khasanjon Mamadaliyev <khasanjon.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.6"
pypdf2 = "^3.0.1"
pillow = "^10.0.0"
coreapi = "^2.3.3"
pdfreader = "^0.1.12"
djangorestframework-simplejwt = "^5.2.2"
django-filter = "^23.2"
pypdf = "^3.12.0"
pdfplumber = "^0.9.0"
pdf2image = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
